<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/envioDatos"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:layout_margin="25dp"/>

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/numero1"
        android:id="@+id/textView8"
        android:layout_column="17"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtNum1"/>

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/numero2"
        android:id="@+id/textView9"
        android:layout_column="17"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtNum2"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sumar"
                    android:id="@+id/radioButton"
                    android:checked="false"
                    />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restar"
                        android:id="@+id/radioButton3"
                        android:layout_column="12"
                        android:checked="false"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dividir"
                    android:id="@+id/radioButton4"
                    android:checked="false"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplicar"
                    android:id="@+id/radioButton2"
                    android:checked="false"/>
            </RadioGroup>


        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:id="@+id/btnEnviar"
        android:layout_gravity="center_horizontal"
        android:onClick="llamarRecibeDatos"/>

</LinearLayout>