<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chino.rocas.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <!--cambiando el mensaje desde android a git hub2-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"

        android:background="@drawable/imagen_fondo"
        android:onClick="llamarEnvioDatos"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titulo"

        android:id="@+id/textView" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciarJuego"
        android:id="@+id/button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuracionJuego"
        android:id="@+id/button2"
        android:onClick="llamarConfiguracion"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salirJuego"
        android:id="@+id/button3"
        android:onClick="salirApp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:text="@string/informacion"
        android:onClick="llamarInformacion"/>

</LinearLayout>
